tests/ui/consts/write-to-static-mut-in-static.stderr
error[E0080]: modifying a static's initial value from another static's initializer
  --> $DIR/write-to-static-mut-in-static.rs:2:33
   |
LL | pub static mut B: () = unsafe { A = 1; };
   |                                 ^^^^^ evaluation of `B` failed here

error[E0080]: encountered static that tried to access itself during initialization
  --> $DIR/write-to-static-mut-in-static.rs:5:34
   |
LL | pub static mut C: u32 = unsafe { C = 1; 0 };
   |                                  ^^^^^ evaluation of `C` failed here

error[E0080]: encountered static that tried to access itself during initialization
  --> $DIR/write-to-static-mut-in-static.rs:8:21
   |
LL | pub static D: u32 = D;
   |                     ^ evaluation of `D` failed here

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0080`.
